--- a/apps/dashboard/templates/dashboard/confirm.html
+++ b/apps/dashboard/templates/dashboard/confirm.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h3>Are you sure you want to delete user {{id}}?</h3>
-        <a href="http://localhost:8000/delete/{{id}}">Confirm deletion</a>
-        <a href="http://localhost:8000/dashboard">No, go back</a>
+        <a href="/delete/{{id}}">Confirm deletion</a>
+        <a href="/dashboard">No, go back</a>
     </body>
