--- a/apps/dashboard/templates/dashboard/newuser.html
+++ b/apps/dashboard/templates/dashboard/newuser.html
@@ -9,9 +9,9 @@
     <body>
         <header>
             <h4>Test App</h4>
-            <a href="http://localhost:8000/dashboard">Dashboard</a>
-            <a href="http://localhost:8000/user/{{request.session.id}}">Profile</a>
-            <a href="http://localhost:8000/logout">Logout</a>
+            <a href="/dashboard">Dashboard</a>
+            <a href="/user/{{request.session.id}}">Profile</a>
+            <a href="/logout">Logout</a>
         </header>
          <form id="adduser" action='/adduser' method='POST'>
             <h2>Register:</h2>
@@ -30,5 +30,5 @@
             Confirm Password: <input type="password" name="confirm" value="password">
             <input type="submit" value="Submit"> 
         </form><br>
-        <a href="http://localhost:8000/login">Already have an account? Login</a>
+        <a href="/login">Already have an account? Login</a>
     </body>
