--- a/apps/dashboard/templates/dashboard/show.html
+++ b/apps/dashboard/templates/dashboard/show.html
@@ -9,9 +9,9 @@
     <body>
         <header>
             <h4>Test App</h4>
-            <a href="http://localhost:8000/dashboard">Dashboard</a>
+            <a href="/dashboard">Dashboard</a>
             <h5>Profile</h5>
-            <a href="http://localhost:8000/logout">Logout</a>
+            <a href="/logout">Logout</a>
         </header>
         <h2>{{user.first_name}} {{user.last_name}}</h2>
         <h5>Registered at:                    {{user.created_at}}</h5>
