--- a/apps/login/templates/login/login.html
+++ b/apps/login/templates/login/login.html
@@ -9,8 +9,8 @@
     <body>
         <header>
             <h3>Test App</h3>
-            <a href="http://localhost:8000">Home</a>
-            <a href="http://loclahost:8000/signin">Sign in</a>
+            <a href="/">Home</a>
+            <a href="/signin">Sign in</a>
         </header>
         <form id="login" action='/logprocess' method='POST'>
             <h2>Login:</h2>
@@ -26,6 +26,6 @@
             Password: <input type="password" name="password" value="password">
             <input type="submit" value="Submit"> 
         </form><br>
-        <a href="http://localhost:8000/registration">Don't have an account? Register</a>
+        <a href="/registration">Don't have an account? Register</a>
     </body>
 </html>
