--- a/apps/login/templates/login/register.html
+++ b/apps/login/templates/login/register.html
@@ -27,5 +27,5 @@
             Confirm Password: <input type="password" name="confirm" value="password">
             <input type="submit" value="Submit"> 
         </form><br>
-        <a href="http://localhost:8000/login">Already have an account? Login</a>
+        <a href="/login">Already have an account? Login</a>
     </body>
