--- a/apps/dashboard/templates/dashboard/admindash.html
+++ b/apps/dashboard/templates/dashboard/admindash.html
@@ -10,11 +10,11 @@
         <header>
             <h4>Test App</h4>
             <h5>Dashboard</h5>
-            <a href="http://localhost:8000/user/{{request.session.id}}">Profile</a>
-            <a href="http://localhost:8000/logout">Logout</a>
+            <a href="/show/{{request.session.id}}">Profile</a>
+            <a href="/logout">Logout</a>
         </header>
         <h1>Manage Users</h1>
-        <a id="newuser" href="http://localhost:8000/newuser">Add New</a>
+        <a id="newuser" href="/newuser">Add New</a>
         <table>
             <tr>
                 <th>ID</th>
@@ -27,11 +27,11 @@
             {% for user in users %}
             <tr>
                 <td>{{user.id}}</td>
-                <td><a href="http://localhost:8000/show/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></td>
+                <td><a href="/show/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></td>
                 <td>{{user.email}}</td>
                 <td>{{user.created_at}}</td>
                 <td>{{user.user_level}}</td>
-                <td><a href="http://localhost:8000/edit/{{user.id}}">Edit</a> <a href="http://localhost:8000/remove/{{user.id}}">remove</a>
+                <td><a href="/edit/{{user.id}}">Edit</a> <a href="/remove/{{user.id}}">remove</a>
             </tr>
             {% endfor %}
     </body>
