--- a/apps/dashboard/templates/dashboard/showuser.html
+++ b/apps/dashboard/templates/dashboard/showuser.html
@@ -9,9 +9,9 @@
     <body>
         <header>
             <h4>Test App</h4>
-            <a href="http://localhost:8000/dashboard">Dashboard</a>
+            <a href="/dashboard">Dashboard</a>
             <h5>Profile</h5>
-            <a href="http://localhost:8000/logout">Logout</a>
+            <a href="/logout">Logout</a>
         </header>
         <h4>Edit User {{user.id}}</h4>
         <form action="update" method="post">
