--- a/apps/dashboard/templates/dashboard/dashboard.html
+++ b/apps/dashboard/templates/dashboard/dashboard.html
@@ -10,7 +10,7 @@
         <header>
             <h4>Test App</h4>
             <h5>Dashboard</h5>
-            <a href="/user/{{request.session.id}}">Profile</a>
+            <a href="/show/{{request.session.id}}">Profile</a>
             <a href="/logout">Logout</a>
         </header>
         <h1>All Users</h1>
