--- a/apps/login/templates/login/index.html
+++ b/apps/login/templates/login/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>Welcome!</h1>
+            <h1>Welcome! PLease login or Register</h1>
         </header>
         <form id="login" action='/login' method='POST'>
             <h2>Login:</h2>
